v0.3.3 - Add ability to change order of slides - Add insert/move/delete options in context menu - Playlist items now have both an id and idx (index) - Fix whitespace in paste playlist textbox

--- a/dialogs/edit-item.css
+++ b/dialogs/edit-item.css
@@ -50,6 +50,10 @@ table#item-data-table {
     width: 90%;
 }
 
+tr.internal-use {
+    display: none;
+}
+
 th,
 td {
     position: relative;
