--- a/presenter.css
+++ b/presenter.css
@@ -6,6 +6,8 @@ body {
 }
 
 .context-menu {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     border: 1px solid black;
     border-radius: 20px;
